[package]
name = "sirius-test-circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
sirius = { path = "../sirius" }
serde = { version = "1.0", features = ["derive"] }
itertools = "0.13.0"
collect_array = "0.1.3"
rand = "0.8.5"
tracing = "0.1.40"
thiserror = "1.0.61"

[dev-dependencies]
tracing-test = "0.2.5"

